# dpia

./: .gitignore  .gitmodules  Cargo.toml  README.md  current.py  justfile  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
crates/lib/: Cargo.toml  README.md
crates/lib/src/: display.rs  lib.rs
crates/main/: Cargo.toml  memory.x
crates/main/src/: ble.rs  bt.rs  data.rs  ep0159.rs  lib.rs  main.rs  persistent.rs  tasks.rs
crates/main/src/sensiron/: generic.rs  mod.rs  sen5x.rs  sht4x.rs  sts4x.rs
crates/main/src/sensiron/sts4x/: model_addrs.rs
crates/testing/: Cargo.toml
crates/testing/src/: main.rs
dep/trouble/examples/linux/: Cargo.toml
schematic/: README.md  main.kicad_pro  main.kicad_sch  sym-lib-table
schematic/libs/: sen5x.kicad_sym
schematic/libs/STS4X/: STS4X.kicad_sym
src/: ble.rs  lib.rs  main.rs
src/sensiron/: generic.rs  mod.rs  sht4x.rs  sts4x.rs
src/sensiron/sht4x/: model_addrs.rs
