[package]
edition = "2024"
name = "dpia"
version = "0.1.0"
authors = ["Trevor Chan <trev@trevrosa.dev>"]
resolver = "2"

[[bin]]
name = "dpia"
test = false
bench = false

[dependencies]
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-storage = "0.3"

cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
# embassy-net = { version = "0.7", features = ["defmt", "packet-trace", "dns", "tcp"]}
trouble-host = "0.2.4"
cyw43 = { version = "0.5.0", features = ["defmt", "bluetooth"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
