cargo-features = ["per-package-target"]

[package]
edition = "2024"
name = "dpia"
version = "0.1.0"
authors = ["Trevor Chan <trev@trevrosa.dev>"]
forced-target = "thumbv8m.main-none-eabihf"

[[bin]]
name = "dpia"
test = false
bench = false

[lib]
test = false

[dependencies]
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-storage = "0.3"

cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-net = { version = "0.7", features = ["defmt", "packet-trace", "dns", "tcp", "medium-ip", "proto-ipv4", "dhcpv4-hostname"]}
embassy-futures = { version = "0.1", features = ["defmt"] }
trouble-host = { path = "../../dep/trouble/host", features = ["peripheral", "gatt", "derive", "defmt"] }
cyw43 = { version = "0.5", features = ["defmt", "bluetooth"] }
cyw43-pio = { version = "0.8", features = ["defmt"] }

byteorder = { version = "1.5", default-features = false }
static_cell = "2.1"
crc = "3.3"
heapless = { version = "0.9" }
# embassy-net uses heapless 0.8
heapless-08 = { version = "0.8", package = "heapless" }
reqwless = { version = "0.13", features = ["defmt"] }

dpia-lib = { path = "../lib" }
