cargo-features = ["per-package-target"]

[package]
edition = "2024"
name = "dpia"
version = "0.1.0"
authors = ["Trevor Chan <trev@trevrosa.dev>"]
forced-target = "thumbv8m.main-none-eabihf"

[[bin]]
name = "dpia"
test = false
bench = false

[lib]
test = false

[features]
default = ["sleep", "i2c", "wifi", "bt"]
sleep = []
i2c = []
wifi = []
bt = []
onboarding = []
monitor-bat = []

[dependencies]
defmt = "1.1.1"
defmt-rtt = "1.3.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"

cortex-m = "0.7.7" 
cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.8.0" }
embassy-sync-072 = { version = "0.7.2", package = "embassy-sync" } # trouble-host 0.6 uses this version
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-net = { version = "0.9.1", features = ["defmt", "packet-trace", "dns", "tcp", "medium-ip", "proto-ipv4", "dhcpv4-hostname"]}
embassy-futures = { version = "0.1.2", features = ["defmt"] }
trouble-host = { version = "0.6.0", features = ["peripheral", "gatt", "derive", "defmt"] } # 0.7 uses bt-hci 0.9, while cyw43 uses bt-hci 0.8, so we are forced on trouble 0.6
cyw43 = { version = "0.7.0", features = ["defmt", "bluetooth"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }

byteorder = { version = "1.5.0", default-features = false }
static_cell = "2.1.1"
crc = "3.4.0"
heapless = "0.9.3"
reqwless = { version = "0.14.0", features = ["defmt"] }
max7219 = "0.5.0"

dpia-lib = { path = "../lib" }
bytemuck = { version = "1.25.2", features = ["derive", "must_cast"] }
